--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link rel="stylesheet" href="style.css">
+</head>
 <body>
 	<canvas id="canvas"></canvas>
 	<!-- GLSL -- Тут ничего не трограть, либо писать Надиму! -->
