Сортировка по папками

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
 	<canvas id="canvas"></canvas>
@@ -34,6 +34,6 @@
 		}
 	</script>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
-	<script src="engine.js"></script>
-	<script src="exampleFlatWorld.js"></script> <!-- Пример -->
+	<script src="Scripts/engine.js"></script>
+	<script src="Examples/exampleFlatWorld.js"></script> <!-- Пример -->
 </body>
