--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
 	</script>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="engine.js"></script>
-	<script src="example.js"></script> <!-- Пример -->
+	<script src="game.js"></script>
 </body>
