--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 	<canvas id="canvas"></canvas>
 	<!-- GLSL -- Тут ничего не трограть, либо писать Надиму! -->
 	<script id="vertex-shader" type="none">
-		precision highp float;
+		//precision highp float;
 		
 		attribute vec3 a_position;
 		attribute vec2 a_texCoord;
 		
 		uniform mat4 u_modelviewMatrix;
 		uniform mat4 u_projectionMatrix;
+		uniform float u_resolution;
 		
 		varying vec2 u_texCoord;
 
 		void main() {
 			u_texCoord = a_texCoord;
-			vec4 pos = u_modelviewMatrix * vec4(a_position, 1.0);
+			vec4 pos = u_modelviewMatrix * vec4(a_position / u_resolution/*, 0.0*/, 1.0);
 			gl_Position = u_projectionMatrix * pos;
 		}
 	</script>
@@ -35,5 +36,5 @@
 	</script>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/engine.js"></script>
-	<script src="Examples/exampleFlatWorld.js"></script> <!-- Пример -->
+	<script src="Examples/example.js"></script> <!-- Пример -->
 </body>
