--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		attribute vec2 a_position;
 		attribute vec2 a_texCoord;
 		
-		uniform mat4 u_modelviewMatrix;
+		uniform vec3 u_translate;
 		uniform mat4 u_projectionMatrix;
 		uniform float u_resolution;
 		
@@ -18,7 +18,7 @@
 
 		void main() {
 			v_texCoord = a_texCoord;
-			vec4 pos = u_modelviewMatrix * vec4(a_position / u_resolution, 0.0, 1.0);
+			vec4 pos = vec4(u_translate + vec3(a_position / u_resolution, 0.0), 1.0);
 			gl_Position = u_projectionMatrix * pos;
 		}
 	</script>
@@ -36,7 +36,6 @@
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/fps.js"></script>
-	<script src="WorldGeneration.js"></script> <!-- Пример -->
-	<script src="game.js"></script> <!-- Пример -->
-	<!--<script src="Examples/example.js"></script> <!-- Пример -->
+	<script src="Scripts/WorldGeneration.js"></script>
+	<script src="Scripts/game.js"></script>
 </body>
