--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/fps.js"></script>
+	<script src="Scripts/level.js"></script>
 	<script src="Scripts/WorldGeneration.js"></script>
 	<script src="Scripts/game.js"></script>
 </body>
