--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/fps.js"></script>
-	<script src="Scripts/level.js"></script>
+	<script src="Scripts/GameArea.js"></script>
 	<script src="Scripts/WorldGeneration.js"></script>
+	<script src="Scripts/level.js"></script>
 	<script src="Scripts/game.js"></script>
 </body>
