Update for pull request

--- a/index.html
+++ b/index.html
@@ -44,6 +44,5 @@
 	<script src="Scripts/GameArea.js"></script>
 	<script src="Scripts/WorldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
-	<script src="Scripts/game.js"></script><!-- -->
-	<!--<script src="Examples/example.js"></script><!-- -->
+	<script src="Scripts/game.js"></script>
 </body>
