--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/fps.js"></script>
+	<script src="Scripts/block_table.js"></script>
 	<script src="Scripts/GameArea.js"></script>
+	<script src="Scripts/player.js"></script>
 	<script src="Scripts/WorldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/game.js"></script>
