Renamed some files

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
-	<script src="Scripts/GameArea.js"></script>
+	<script src="Scripts/gameArea.js"></script>
 	<script src="Scripts/blockTable.js"></script>
 	<script src="Scripts/player.js"></script>
-	<script src="Scripts/WorldGeneration.js"></script>
+	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/game.js"></script>
 </body>
