Refactor changes (NOT WORK!!!)

--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
-	<script src="Scripts/game.js"></script>
+	<script src="Scripts/preprocessing.js"></script>
 </body>
