--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas" oncontextmenu="return false"></canvas>
 	<p id="fps" class="fps">  0 FPS</p>
 	<!-- GLSL -- Тут ничего не трограть, либо писать Надиму! -->
 	<script id="vertex-shader" type="none">
