--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<script src="Scripts/blockTable.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
+	<script src="Scripts/saveWorld.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 </body>
