--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<script src="Scripts/fps.js"></script>
 	<script src="Scripts/gameArea.js"></script>
 	<script src="Scripts/blockTable.js"></script>
+	<script src="Scripts/test.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
