blockTable.js полностю заменён на items.js

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
 	<script src="Scripts/gameArea.js"></script>
-	<script src="Scripts/blockTable.js"></script>
-	<script src="Scripts/test.js"></script>
+	<script src="Scripts/items.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/level.js"></script>
