--- a/develop/index.html
+++ b/develop/index.html
@@ -43,10 +43,10 @@
 	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
 	<script src="Scripts/gameArea.js"></script>
-	<script src="Scripts/blockTable.js"></script>
-	<script src="Scripts/test.js"></script>
+	<script src="Scripts/items.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
+	<script src="Scripts/saveWorld.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 </body>
