--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 </head>
 <body>
 	<canvas id="canvas" oncontextmenu="return false"></canvas>
-	<p id="loading" class="loading">Идёт загрузка игры...</p>
+	<p id="loading" class="loading">
+		Идёт загрузка игры...<br>
+		<img src="Images/loading.gif" class="loading-img"></img>
+	</p>
 	<p id="fps" class="fps">  0 FPS</p>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/shaders.js"></script>
