Добавлена техническая часть анимаций

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
 	<script src="Scripts/gameArea.js"></script>
+	<script src="Scripts/animations.js"></script>
 	<script src="Scripts/items.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
