--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		Идёт загрузка игры...<br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
-	<p id="fps" class="fps">  0 FPS</p>
+	<p id="fps" class="fps">  0 FPS |   0 AVG</p>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
