--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</p>
 	<p id="fps" class="fps">  0 FPS |   0 AVG</p>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
-	<script src="Scripts/stat.js"></script>
+	<script src="Scripts/cheats.js"></script>
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/controller.js"></script>
