Немного улучшен счётчик кадров в секунду

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		Идёт загрузка игры...<br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
-	<p id="fps" class="fps">  0 FPS |   0 AVG</p>
+	<div class="fps">
+		<data id="fps">  0</data> FPS | <data id="avg">  0</data> AVG
+	</div>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/stat.js"></script>
 	<script src="Scripts/shaders.js"></script>
