back layouts optimization

--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 		Идёт загрузка игры...<br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
-	<p id="fps" class="fps">  0 FPS</p>
+	<div class="fps">
+		<data id="fps">  0</data> FPS | <data id="avg">  0</data> AVG
+	</div>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
+	<script src="Scripts/stat.js"></script>
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
 	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
 	<script src="Scripts/gameArea.js"></script>
+	<script src="Scripts/animations.js"></script>
 	<script src="Scripts/items.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/saveWorld.js"></script>
+	<script src="Scripts/weather.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 </body>
