--- a/Interface/index.html
+++ b/Interface/index.html
@@ -2,10 +2,10 @@
 <head>
 	<link rel="stylesheet" href="Css/style.css">
 </head>
-<body>
+<body id="body">
 	<canvas id="canvas" oncontextmenu="return false"></canvas>
 	<p id="loading" class="loading">
-		Идёт загрузка игры...<br>
+		Идёт загрузка игры...<br><br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
 	<p id="fps" class="fps">  0 FPS |   0 AVG</p>
