--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="Scripts/gameArea.js"></script>
 	<script src="Scripts/animations.js"></script>
 	<script src="Scripts/items.js"></script>
+	<script src="Scripts/crafts.js"></script>	
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/saveWorld.js"></script>
