Возвращён счетчик фпс

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		Идёт загрузка игры...<br><br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
-	<!-- <div class="fps">
+	<div class="fps">
 		<data id="fps">  0</data> FPS | <data id="avg">  0</data> AVG
-	</div> -->
+	</div>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
