--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body id="body">
 	<canvas id="canvas" oncontextmenu="return false"></canvas>
+        <canvas id="test"></canvas>
 	<p id="loading" class="loading">
 		Идёт загрузка игры...<br><br>
 		<img src="Images/loading.gif" class="loading-img"></img>
@@ -27,4 +28,5 @@
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 	<script src="Scripts/UI.js"></script>
+
 </body>
