--- a/Player/index.html
+++ b/Player/index.html
@@ -8,7 +8,9 @@
 		Идёт загрузка игры...<br>
 		<img src="Images/loading.gif" class="loading-img"></img>
 	</p>
-	<p id="fps" class="fps">  0 FPS |   0 AVG</p>
+	<div class="fps">
+		<data id="fps">  0</data> FPS | <data id="avg">  0</data> AVG
+	</div>
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
@@ -20,6 +22,7 @@
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/saveWorld.js"></script>
+	<script src="Scripts/weather.js"></script>
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 </body>
