--- a/develop/index.html
+++ b/develop/index.html
@@ -14,12 +14,13 @@
 	<!-- JavaScript -- Сюда писать ваши скрипты -->
 	<script src="Scripts/shaders.js"></script>
 	<script src="Scripts/engine.js"></script>
-	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/fps.js"></script>
+	<script src="Scripts/controller.js"></script>
 	<script src="Scripts/gameArea.js"></script>
 	<script src="Scripts/animations.js"></script>
 	<script src="Scripts/items.js"></script>
-	<script src="Scripts/crafts.js"></script>	
+	<script src="Scripts/crafts.js"></script>
+	<script src="Scripts/prompt.js"></script>
 	<script src="Scripts/player.js"></script>
 	<script src="Scripts/worldGeneration.js"></script>
 	<script src="Scripts/saveWorld.js"></script>
@@ -27,4 +28,5 @@
 	<script src="Scripts/level.js"></script>
 	<script src="Scripts/preprocessing.js"></script>
 	<script src="Scripts/UI.js"></script>
+
 </body>
