--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <head>
+	<meta charset="utf-8" />
+	<title>TerraCraft</title>
 	<link rel="stylesheet" href="Css/style.css">
 </head>
 <body id="body">
-	<canvas id="canvas" oncontextmenu="return false"></canvas>
-	<p id="loading" class="loading">
-		Идёт загрузка игры...<br><br>
-		<img src="Images/loading.gif" class="loading-img"></img>
-	</p>
+	<!--<canvas id="canvas" oncontextmenu="return false"></canvas>-->
+	<div id="container">
+		<div id="outer">
+			<div id="inner">
+				TerraCraft<br>
+				<img src="Images/loading.gif" id="loading-img"></img>
+			</div>
+		</div>
+	</div>
 	<div class="fps">
 		<data id="fps">  0</data> FPS | <data id="avg">  0</data> AVG
 	</div>
