--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <head>
 	<meta charset="utf-8" />
 	<title>TerraCraft</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="Css/style.css">
 </head>
 <body id="body">
-	<!--<canvas id="canvas" oncontextmenu="return false"></canvas>-->
-	<div id="container">
-		<div id="outer">
-			<div id="inner">
-				TerraCraft<br>
-				<img src="Images/loading.gif" id="loading-img"></img>
-			</div>
+	<canvas id="canvas" oncontextmenu="return false"></canvas>
+	<div id="loading">
+		<div id="inner">
+			TerraCraft<br>
+			<img src="Images/loading.gif" id="loading-img"></img><br>
 		</div>
 	</div>
 	<div class="fps">
